RESOLVED FIXED300416
didGeneratePageLoadTiming sometimes does not fire of a subresource request occurs around the time of a main frame navigation
https://bugs.webkit.org/show_bug.cgi?id=300416
Summary didGeneratePageLoadTiming sometimes does not fire of a subresource request oc...
Ben Nham
Reported 2025-10-08 16:21:12 PDT
See PR
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-08 16:21:23 PDT
Ben Nham
Comment 2 2025-10-08 16:27:26 PDT
EWS
Comment 3 2025-10-09 00:26:19 PDT
Committed 301253@main (fe0a3853f26c): <https://commits.webkit.org/301253@main> Reviewed commits have been landed. Closing PR #52033 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.