Source/WebKit/UIProcess/WebFrameProxy.h
@@ -195,6 +195,7 @@ public:
     void transferNavigationCallbackToFrame(WebFrameProxy&);
     void setNavigationCallback(CompletionHandler<void(std::optional<WebCore::PageIdentifier>, std::optional<WebCore::FrameIdentifier>)>&&);
 
+    bool isConnected() const;
     void disconnect();
     void didCreateSubframe(WebCore::FrameIdentifier, String&& frameName, WebCore::SandboxFlags, WebCore::ReferrerPolicy, WebCore::ScrollbarMode);
     ProcessID processID() const;
